<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <pl.kossa.myflights.views.appbars.BackAppBar
        android:id="@+id/backAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/airplaneSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/airplaneIv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="64dp"
                    android:src="@drawable/ic_airplane_rounded"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/nameEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@id/airplaneIv"
                    app:tagText="@string/airplane_name"
                    tools:valueText="A380" />

                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/maxSpeedEtw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/nameEwt"
                    app:tagText="@string/airplane_max_speed"
                    tools:valueText="250 kn" />

                <pl.kossa.myflights.views.ElementWithTagView
                    android:id="@+id/weightEwt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/maxSpeedEtw"
                    app:tagText="@string/airplane_weight"
                    tools:valueText="30 t" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/editButton"
                    style="@style/BlackButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weightEwt" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>