...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/airplanesSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/airplanesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/element_airplane" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

...
        android:textAlignment="center"
        android:textSize="@dimen/big_text_size"
        android:visibility="invisible"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/ic_add_white_24" />

...
